<?xml version="1.0"?>
<package format="3">
  <name>costmap</name>
  <version>0.1.0</version>
  <description>A ROS2 package for costmap generation and processing</description>

  <maintainer email="oleather@watonomous.ca">Owen Leather</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
